# processo-para-obter-perfis-altimetricos

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
config/: __init__.py
core/: data_processing.py  geo_processor.py  geotiff.py  kml.py  visualization.py
